src/objects/ELQA_Marketing_Activity__c.object
<CustomObject>
    <description>DELETE?
Owner - Eloqua</description>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Detail__c</fullName>
        <label>Activity Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form Submit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Activities</relationshipLabel>
        <relationshipName>R00N30000001SFF7EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Marketing Activities</relationshipLabel>
        <relationshipName>R00N30000001SFFAEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Marketing Activity</label>
    <nameField>
        <label>Marketing Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>